--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <meta name="description"
     content="" />
   <meta name="keywords" content="" />
-  <meta name="author" content="Versus Dashboard v2\" />
+  <meta name="author" content="Link Exchange Dashboard v2\" />
 </head>
 
 <body>
